# talkify

./: .gitignore  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py
chat/: consumers.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py
core/: urls.py  views.py
templates/: base.html  home.html
templates/accounts/: login.html  profile.html  profile_edit.html  register.html
templates/chat/: chat_view.html
templates/core/: user_list.html
