[project]
name = "talkify"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruturajsinh Rathod",email = "ruturajsinh.rathod@mindinvemtory.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "channels (>=4.3.1,<5.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "daphne (>=4.2.1,<5.0.0)"
]


[build-system]
python = "^3.12"
